--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/drawer": "^7.3.9",
+    "@react-navigation/native": "^7.1.6",
     "expo": "53.0.19",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-image": "~2.3.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-router": "~5.1.3",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.10",
     "lucide-react-native": "^0.525.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -27,10 +28,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-dev-client": "~5.2.4",
-    "expo-system-ui": "~5.0.10"
+    "react-native-web": "~0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
