--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "play-plus-craft-2025",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/android-chrome-192x192.png",
+    "icon": "./assets/images/adaptive-icon.png",
     "scheme": "play-plus-craft-2025",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,7 +13,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/android-chrome-192x192.png",
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "monochromeImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
@@ -29,9 +30,14 @@
       [
         "expo-splash-screen",
         {
-          "backgroundColor": "#1a1a2e",
-          "image": "./assets/images/android-chrome-192x192.png",
-          "imageWidth": 192
+          "image": "./assets/images/splash-icon-dark.png",
+          "backgroundColor": "#ffffff",
+          "dark": {
+            "image": "./assets/images/splash-icon-light.png",
+            "backgroundColor": "#000000"
+          },
+          "imageWidth": 200,
+          "resizeMode": "contain",
         }
       ]
     ],
