feat: add metadata, use responsive images in URLs

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "style": "prettier -w .",
+    "lint": "expo lint",
+    "ts:check": "tsc --noEmit",
+    "doctor": "expo-doctor"
   },
   "dependencies": {
     "@react-navigation/drawer": "^7.3.9",
@@ -27,16 +30,20 @@
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-svg": "15.11.2"
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "~0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
-    "eslint": "^9.25.0",
+    "eslint": "^9.31.0",
     "eslint-config-expo": "~9.2.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "expo-doctor": "^1.13.5",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.3"
   },
   "private": true
